welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: ')' expected but integer literal found.
(a %1 0 == b % 10)} 
      ^